# vpn-status

./: .rusty-hook.toml  Cargo.toml  README.md
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: rust-clippy.yml  rust.yml
configs/: bool.toml  emoji.toml  full.toml  unicode.toml
src/: args.rs  config.rs  lib.rs  main.rs  parser.rs  styles.rs
vpn-status/: Cargo.toml  README.md
vpn-status-lib/: Cargo.toml  README.md
vpn-status-lib/examples/: basic.rs
vpn-status-lib/src/: config.rs  error.rs  lib.rs  parser.rs  styles.rs
vpn-status/configs/: bool.toml  emoji.toml
vpn-status/src/: config.rs  main.rs
