[package]
name = "vpn-status-lib"
version = "0.1.0"
edition = "2021"
authors = ["Tomash Ghz <ghz.tomash@hotmail.com>"]
description = "A simple library to determine whether vpn is enabled"
repository = "https://github.com/ghztomash/vpn-status"
keywords = ["vpn", "network"]
categories = ["network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
thiserror = "1.0"
netdev = "0.25"
serde = { version = "1", features = ["derive"] }
public-ip-address = { version = "0.1" }
colored = "2"

[[example]]
name = "basic"
path = "examples/basic.rs"
