[package]
name = "vpn-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
confy = "0"
colored = "2"
color-eyre = { version="0" }
clap = { version = "4", features = ["derive"] }
vpn-status-lib = { path = "../vpn-status-lib" }
